# rust-demo

./: .gitignore  Cargo.toml
actix_web_demo/: Cargo.toml
actix_web_demo/examples/: echo.rs
anyhow_demo/: Cargo.toml
anyhow_demo/examples/: demo1.rs  demo2.rs
async_task_demo/: Cargo.toml
async_task_demo/src/: main.rs
deno_runtime_demo/: Cargo.toml  README.md  build.rs  cache_rusty.sh
deno_runtime_demo/examples/: eval_js_value.rs
deno_runtime_demo/src/: demo.rs  hello_runtime.js  lib.js  main.rs
enum_iterator_demo/: Cargo.toml
enum_iterator_demo/src/: main.rs
js_sandbox_demo/: Cargo.toml  README.md  build1.rs  dhrc4.js  dhrc4_orig.js
js_sandbox_demo/examples/: dhrc4.rs
js_sandbox_demo/src/: main.js  main.rs
jsonschema_demo/: Cargo.toml
jsonschema_demo/src/: main.rs
lettre_email_demo/: Cargo.toml
lettre_email_demo/examples/: tls_stream.rs
lettre_email_demo/src/: main.rs
napi_demo/: Cargo.toml  README.md
napi_demo/src/: esm_module.js  main.rs
pnet_demo/: Cargo.toml
pnet_demo/examples/: demo1.rs
rand_demo/: Cargo.toml
rand_demo/examples/: rand_get.rs  sampler_iter.rs
read_schemars_code/: Cargo.toml
read_schemars_code/examples/: account_server.rs  account_server_schema.json  account_server_schema_instance.config.yaml  account_server_schema_instance.json
read_schemars_code/src/: main.rs
rio-fs-write/: Cargo.toml
rio-fs-write/src/: main.rs
rust_embed_demo/: Cargo.toml
rust_embed_demo/src/: main.rs
rust_embed_demo/static/: jsonschema-schema.json
rustlib-demo/: Cargo.toml
rustlib-demo/examples/: const_func.rs  copy.rs  default_trait_default_value.rs  deque_deque.rs  dequeue_cycle_queue.rs  dequeue_queue.rs  dequeue_stack.rs  enum_number.rs  env.rs  fn_fnmut_fnonce.rs  libc.rs  libc_pointer.c  str.rs  str_multi_line.rs  system_time.rs  time.rs
serde_demo/: Cargo.toml
serde_demo/examples/: deserialize_seed.md  deserialize_seed.rs  serde-default-value.rs  serde_as_demo1.rs  serde_json_pointer.rs  serde_json_pointer_array_element.rs  serde_json_yaml_convert.rs  value.rs
test-case-demo/: Cargo.toml
test-case-demo/examples/: dynamic-name-method.rs  pretty_assertions.rs
test-case-demo/tests/: demo.rs
thiserror_demo/: Cargo.toml
thiserror_demo/examples/: thiserror-demo.rs  thiserror-dynamic-message.rs
thread_demo/: Cargo.toml
thread_demo/examples/: catch_unwind.rs
tokio_demo/: Cargo.toml
tokio_demo/src/: main.rs
tracing_opentelemetry_openobserve/: Cargo.toml
tracing_opentelemetry_openobserve/examples/: demo.rs  fmt.rs  otlp.rs  otlp_jaeger.rs  otlp_openobserve.rs
tracing_opentelemetry_openobserve/logs/: log.json
url_demo/: Cargo.toml
url_demo/examples/: demo.rs  form_urlencoded.rs
wasm_bindgen_demo/: Cargo.toml  build_dhrc4_wasm.sh  dhrc4.js
