[workspace]
resolver = "2"
members = [
    # "read_schemars_code",
    # "rio-fs-write",
    # "tracing_opentelemetry_openobserve",
    # "rustlib-demo",
    # "test-case-demo",
    # "thread_demo",
    # "pnet_demo",
    # "serde_demo",
    # "enum_iterator_demo",
    # "rand_demo",
    # "rust_embed_demo",
    # "anyhow_demo",
    # "jsonschema_demo",
    # "url_demo",
    # "thiserror_demo",
    # "actix_web_demo",
    # "async_task_demo",
    # "lettre_email_demo",
    # "tokio_demo",
    # "wasm_bindgen_demo",
    "js_sandbox_demo",
    "deno_runtime_demo",
    "napi_demo",
]
exclude = [
    # "deno_core_demo",
]


[workspace.dependencies]
test-case = "3.1.0"
enum-iterator = "1.4.1"
pnet = { version = "0.34.0", features = ["serde", "pcap"] }
schemars = { version = "0.8.13", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
validator = { version = "0.16.1", features = ["derive"] }
serde_with = "3.3.0"
ntest = "0.9.0"
pretty_assertions = "1.4.0"
chrono = "0.4.31"
chrono-tz = "0.8.3"
rand = "0.8.5"
rust-embed = "8.0.0"
anyhow = "1.0.75"
jsonschema = "0.17.1"
url = "2.4.1"
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.48"
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
deno_core = "0.214.0"
deno_fs = "0.29.0"
deno_runtime = "0.127.0"
tokio = { version = "1.32.0", features = ["full"] }