[package]
name = "deno_runtime_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core.workspace = true
deno_fs.workspace = true
deno_runtime.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
serde_v8 = "0.123.0"
tokio.workspace = true
