[package]
name = "enum_iterator_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
enum-iterator.workspace = true
itertools = "0.11.0"
serde = { workspace = true, features = ["derive"] }

[package.metadata]
clippy.exclude = [
    "clippy::from_over_into",
]
