[package]
name = "napi_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "0.10.1"
napi = { version = "2.13.3", features = ["full"] }
napi-derive = "2.13.0"
neon-runtime = "0.10.1"
tokio = { version = "1.32.0", features = ["full"] }
