[package]
name = "read_schemars_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.13", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
validator = { version = "0.16.1", features = ["derive"] }
