[package]
name = "rustlib-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
libc = "0.2.148"
num-derive = "0.4.0"
num-traits = "0.2.16"
num_enum = "0.7.0"
timezone = "0.1.0"
