[package]
name = "tracing_opentelemetry_openobserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

once_cell = "1.17"
chrono = "0.4.28"

opentelemetry = { version = "0.20.0", features = ["rt-tokio", "logs"] }
opentelemetry-appender-log = "0.1.0"
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "metrics", "grpc-sys", "reqwest-client", "trace"] }
opentelemetry-stdout = { version = "0.1.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.20.0", features = ["logs", "logs_level_enabled"] }


tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.21.0"
